--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,15 @@
 apply plugin: 'com.android.application'
 
+def getApiKey() {
+    def Properties props = new Properties()
+    try {
+        props.load(new FileInputStream(project.file('secrets.properties')))
+    } catch (Exception e) {
+        return ""
+    }
+    return props['API_KEY']
+}
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -12,8 +22,12 @@ android {
     }
     buildTypes {
         release {
+            buildConfigField "String", "API_KEY", "\"" + getApiKey() +"\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            buildConfigField "String", "API_KEY", "\"" + getApiKey() +"\""
         }
     }
 }
@@ -23,7 +37,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.mcxiaoke.volley:library:1.0.+'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
